--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,55 @@
-;Examples of readable filenames: my_example_key.mp4, my_example_test.mp4
-[key]
-title = This is my key video
+[0830]
+title = Tommy O'Brien
+description = Morning Market Kickoff
 
-description = Hello World
+[0900]
+title = Tommy O'Brien 
+description =9AM Market Update
 
-tags = this, is, a, test
+[0907]
+title = Larry Pesavento
+description = Trade What You See
 
-time_to_upload = 1200
+[1000]
+title = Tommy O'Brien 
+description = 10AM Market Update
 
-[test]
-title = This is my test video 
+[1007]
+title = Tom & Tommy O'Brien 
+description = The Bull Bear Hour
 
-description = This is a test
+[1200]
+title = Tommy O'Brien 
+description = NOON Market Update
 
-tags = hello, world
+[1207]
+title = Basil Chapman 
+description = The Tiger Technician's Hour
 
-time_to_upload = 200
+[1300]
+title = Tommy O'Brien 
+description = 1PM Market Update
+
+[1307]
+title = Steve Rhodes 
+description = The Trader's Edge
+
+[1400]
+title = Tommy O'Brien 
+description = 2PM Market Update
+
+[1407]
+title = David White 
+description = The Power Trading Hour
+
+[1500]
+title = Tom O'Brien 
+description = 3PM Market Update
+
+[1507]
+title = Tom O'Brien 
+description = The Tom O'Brien Show
+
+[1600]
+title = Tom O'Brien 
+description = 4PM Market Update
